// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalHeader Snapshots should match snapshot with ReactNode title 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#EEEEEE",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      [
        {
          "borderBottomWidth": 1,
        },
        undefined,
      ],
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text>
      Custom Title Node
    </Text>
  </View>
  <View
    style={
      [
        {
          "width": 50,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`ModalHeader Snapshots should match snapshot with custom right content 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#EEEEEE",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      [
        {
          "borderBottomWidth": 1,
        },
        undefined,
      ],
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Custom Right
    </Text>
  </View>
  <Text>
    Save
  </Text>
</View>
`;

exports[`ModalHeader Snapshots should match snapshot with disabled done button 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#EEEEEE",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      [
        {
          "borderBottomWidth": 1,
        },
        undefined,
      ],
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Disabled Done
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FF8C4C",
            "fontSize": 16,
            "fontWeight": "700",
            "lineHeight": 24,
            "opacity": 0.5,
          },
          undefined,
        ]
      }
    >
      Done
    </Text>
  </View>
</View>
`;

exports[`ModalHeader Snapshots should match snapshot with done button 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#EEEEEE",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      [
        {
          "borderBottomWidth": 1,
        },
        undefined,
      ],
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Modal with Done
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FF8C4C",
            "fontSize": 16,
            "fontWeight": "700",
            "lineHeight": 24,
            "opacity": 1,
          },
          undefined,
        ]
      }
    >
      Done
    </Text>
  </View>
</View>
`;

exports[`ModalHeader Snapshots should match snapshot with title and cancel only 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#EEEEEE",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      [
        {
          "borderBottomWidth": 1,
        },
        undefined,
      ],
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#212121",
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Modal Title
    </Text>
  </View>
  <View
    style={
      [
        {
          "width": 50,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`ScreenHeader Snapshots should match snapshot with ReactNode title 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      [
        {
          "borderBottomWidth": 1,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "height": 32,
          "width": 40,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text>
      Custom Title
    </Text>
  </View>
  <View
    style={
      [
        {
          "height": 32,
          "width": 40,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`ScreenHeader Snapshots should match snapshot with back button 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      [
        {
          "borderBottomWidth": 1,
        },
        undefined,
      ],
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 32,
        "justifyContent": "center",
        "opacity": 1,
        "width": 40,
      }
    }
  >
    <Text
      testID="icon-arrow-back"
    >
      arrow-back
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      Screen with Back
    </Text>
  </View>
  <View
    style={
      [
        {
          "height": 32,
          "width": 40,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`ScreenHeader Snapshots should match snapshot with custom right content 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      [
        {
          "borderBottomWidth": 1,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "height": 32,
          "width": 40,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      Custom Right
    </Text>
  </View>
  <Text>
    Custom
  </Text>
</View>
`;

exports[`ScreenHeader Snapshots should match snapshot with right action icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      [
        {
          "borderBottomWidth": 1,
        },
        undefined,
      ],
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 32,
        "justifyContent": "center",
        "opacity": 1,
        "width": 40,
      }
    }
  >
    <Text
      testID="icon-arrow-back"
    >
      arrow-back
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      Screen with Action
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "height": 32,
        "justifyContent": "center",
        "opacity": 1,
        "width": 40,
      }
    }
  >
    <Text
      testID="icon-settings"
    >
      settings
    </Text>
  </View>
</View>
`;

exports[`ScreenHeader Snapshots should match snapshot with title only 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      [
        {
          "borderBottomWidth": 1,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "height": 32,
          "width": 40,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#212121",
            "fontSize": 18,
            "fontWeight": "700",
            "lineHeight": 27,
          },
          undefined,
        ]
      }
    >
      Test Screen
    </Text>
  </View>
  <View
    style={
      [
        {
          "height": 32,
          "width": 40,
        },
        undefined,
      ]
    }
  />
</View>
`;
